--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "dependencies": {
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
+    "@react-navigation/native": "^6.1.9",
+    "@react-navigation/stack": "^6.3.20",
     "iconsax-react-native": "^0.0.8",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-gesture-handler": "^2.13.4",
     "react-native-paper": "^5.11.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
