--- a/package.json
+++ b/package.json
@@ -14,9 +14,12 @@
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
     "@react-navigation/stack": "^6.3.20",
+    "@shopify/flash-list": "^1.6.3",
+    "axios": "^1.6.2",
     "iconsax-react-native": "^0.0.8",
     "react": "18.2.0",
     "react-native": "0.72.5",
+    "react-native-actions-sheet": "^0.9.0-alpha.24",
     "react-native-gesture-handler": "^2.13.4",
     "react-native-paper": "^5.11.1",
     "react-native-safe-area-context": "^4.7.4",
