--- a/package.json
+++ b/package.json
@@ -10,6 +10,9 @@
     "test": "jest"
   },
   "dependencies": {
+    "@react-native-firebase/app": "^18.7.2",
+    "@react-native-firebase/firestore": "^18.7.2",
+    "@react-native-firebase/storage": "^18.7.2",
     "@react-navigation/bottom-tabs": "^6.5.11",
     "@react-navigation/material-bottom-tabs": "^6.2.19",
     "@react-navigation/native": "^6.1.9",
@@ -21,6 +24,7 @@
     "react-native": "0.72.5",
     "react-native-actions-sheet": "^0.9.0-alpha.24",
     "react-native-gesture-handler": "^2.13.4",
+    "react-native-image-crop-picker": "^0.40.2",
     "react-native-paper": "^5.11.1",
     "react-native-safe-area-context": "^4.7.4",
     "react-native-screens": "^3.27.0",
